--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>TechNova</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="techNovaLogo.jpg" type="image/x-icon">
+<meta name="google-site-verification" content="86a-pIS3UXmw_5eaNzLc4FCnTkYdM95O2U1jdlsPaQE" />
   </head>
   <body>
     <header>
